fix image spacing

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -61,7 +61,9 @@ nav ul a {
  img{
    width: 200px;
    float: left;
-   margin-right: 10px;
+   margin-right: 13px;
+   margin-bottom: 20px;
+   margin-top: 6px;
  }
 
  /* Styling Facts About Starfish and pushing the pointforms more to the left */
